<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.gregor-poloczek.project-maintainer</groupId>
    <artifactId>project-maintainer</artifactId>
    <version>0.19.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>A browser based tool for maintaining applications managed in git repositories</description>
    <url>https://github.com/gregor-poloczek/project-maintainer</url>

    <developers>
        <developer>
            <name>Gregor Poloczek</name>
            <email>gregor.poloczek@googlemail.com</email>
            <organization>Private</organization>
            <organizationUrl>https://github.com/gregor-poloczek</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/gregor-poloczek/project-maintainer.git</connection>
        <developerConnection>scm:git:ssh://github.com:gregor-poloczek/project-maintainer.git</developerConnection>
        <url>https://github.com/gregor-poloczek/project-maintainer/tree/main</url>
    </scm>

    <licenses>
        <license>
            <name>Source Available License (SAL) – Custom, Version 1.0</name>
            <url>https://github.com/gregor-poloczek/project-maintainer/blob/main/LICENSE-1.0.md</url>
        </license>
    </licenses>

    <modules>
        <module>project-maintainer-core</module>
        <module>project-maintainer-ui</module>
        <module>project-maintainer-analysis</module>
        <module>project-maintainer-scm</module>
        <module>project-maintainer-reporting</module>
        <module>project-maintainer-patching</module>
    </modules>

    <properties>
        <vaadin.version>24.9.9</vaadin.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <spring-boot.version>3.5.10</spring-boot.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <lucene.version>8.10.1</lucene.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.github.gregor-poloczek.project-maintainer</groupId>
                <artifactId>project-maintainer-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.gregor-poloczek.project-maintainer</groupId>
                <artifactId>project-maintainer-scm</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.gregor-poloczek.project-maintainer</groupId>
                <artifactId>project-maintainer-patching</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.gregor-poloczek.project-maintainer</groupId>
                <artifactId>project-maintainer-reporting</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.gregor-poloczek.project-maintainer</groupId>
                <artifactId>project-maintainer-analysis</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-bom</artifactId>
                <!-- Declare the latest Vaadin version
                     as a property or directly here -->
                <version>${vaadin.version}</version> <!-- <1> -->
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <!-- Import dependency management from Spring Boot -->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>2.23.5</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.eclipse.jgit</groupId>
                <artifactId>org.eclipse.jgit</artifactId>
                <version>7.5.0.202512021534-r</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.42</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-yaml</artifactId>
                <version>2.17.3</version>
            </dependency>

            <dependency>
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-core</artifactId>
                <version>${lucene.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-queryparser</artifactId>
                <version>${lucene.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-analyzers-common</artifactId>
                <version>${lucene.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.20.0</version>
            </dependency>

            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.21.0</version>
            </dependency>

            <dependency>
                <groupId>net.time4j</groupId>
                <artifactId>time4j-base</artifactId>
                <version>5.9</version>
            </dependency>
            <dependency>
                <groupId>net.time4j</groupId>
                <artifactId>time4j-sqlxml</artifactId>
                <version>5.9</version>
            </dependency>

            <dependency>
                <groupId>io.github.java-diff-utils</groupId>
                <artifactId>java-diff-utils</artifactId>
                <version>4.12</version>
            </dependency>

            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>2.2</version>
            </dependency>


            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-core</artifactId>
                <version>3.9.12</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.kohsuke/github-api -->
            <dependency>
                <groupId>org.kohsuke</groupId>
                <artifactId>github-api</artifactId>
                <version>1.318</version>
            </dependency>

        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.30</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- Source JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Optional: Javadoc JAR -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.12.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <failOnError>false</failOnError>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.9.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central.sonatype.org</publishingServerId>
                    <checksums>all</checksums>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.8</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>